--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -8,6 +8,6 @@
   </div>
 
   <div class="form-actions">
-    <%%= f.button :submit %>
+    <%%= f.button :submit, class: 'btn btn-success', value: t('.submit', default: t('global.form.actions.submit')) %>
   </div>
 <%% end %>
