--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,11 +1,20 @@
 <div class="page-header">
-  <div class="actions">
-    <%= link_to icon('plus'), new_business_path, 
-      class: 'btn btn-success', data: { toggle: 'tooltip', container: 'body' }, 
-      title: t('businesses.actions.new', default: t('global.actions.new')) %>
+  <div class="row">
+    <h1 class="col-md-10"> <%= t '.title' %></h1>
+    <div class="actions col-md-2">
+      <%= link_to icon('plus'), new_business_path, 
+        class: 'btn btn-success', data: { toggle: 'tooltip', container: 'body' }, 
+        title: t('businesses.actions.new', default: t('global.actions.new')) %>
+      <a class="btn btn-info" role="button" data-toggle="collapse"
+        href="#collapse_search_form" aria-expanded="false" aria-controls="collapse_search_form">
+        <%= icon "filter" %>
+      </a>
+    </div>
   </div>
+</div>
 
-  <h1><%= t '.title' %></h1>
+<div class="row">
+  <%= render 'filter', q: @q %>
 </div>
 
 <div class="table-responsive">
