--- a/app/views/delivery_men/show.html.erb
+++ b/app/views/delivery_men/show.html.erb
@@ -5,10 +5,10 @@
     </div>
     <div class="col-md-2">
       <div class="actions">
-        <%= link_to icon('chevron-left'), businesses_path, 
+        <%= link_to icon('chevron-left'), delivery_men_path, 
           class: 'btn btn-default', data: { toggle: 'tooltip', container: 'body' }, 
           title: t('.back', default: t('global.actions.back')) %>
-        <%= link_to icon('pencil'), edit_business_path(@business), 
+        <%= link_to icon('pencil'), edit_delivery_man_path(@delivery_man), 
           class: 'btn btn-primary', data: { toggle: 'tooltip', container: 'body' }, 
           title: t('.back', default: t('global.actions.edit')) %>
       </div>
@@ -19,10 +19,8 @@
 <div class="row">
   <div class="col-md-12">
     <dl class="dl-horizontal">
-        <dt><%= t 'activerecord.attributes.business.name' %></dt>
-        <dd><%= @business.name %></dd>
-        <dt><%= t 'activerecord.attributes.business.address' %></dt>
-        <dd><%= @business.address %></dd>
+        <dt><%= t 'activerecord.attributes.delivery_man.nickname' %></dt>
+        <dd><%= @delivery_man.nickname %></dd>
     </dl>
   </div>
 </div>
