--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#"><%# link_to t('views.navbar.dropdown.'), _path %></a></li>
+            <li><a href="#"><%= link_to t('views.navbar.dropdown.delivery_men'), delivery_men_path %></a></li>
           </ul>
         </li>
       </ul>
