Se creó el módulo de deliveries.

--- a/app/views/deliveries/_filter.html.erb
+++ b/app/views/deliveries/_filter.html.erb
@@ -2,17 +2,32 @@
   <div class="search">
     <%= search_form_for(@q) do |f| -%>
       <div class="row">
-        <%= f.input :nickname,
+        <%= f.input :start_date,
                     required: false,
                     label: t('.name'),
-                    wrapper_html: { class: 'col-md-8 col-md-offset-2' }
+                    wrapper_html: { class: 'col-md-3' }
+        %>
+        <%= f.input :end_date,
+                    required: false,
+                    label: t('.name'),
+                    wrapper_html: { class: 'col-md-3' }
+        %>
+        <%= f.input :address,
+                    required: false,
+                    label: t('.name'),
+                    wrapper_html: { class: 'col-md-3' }
+        %>
+        <%= f.input :business_id,
+                    required: false,
+                    label: t('.name'),
+                    wrapper_html: { class: 'col-md-3' }
         %>
       </div>
       <div class="row">
         <div class="col-md-12 text-right">
           <%= f.submit t('global.filters.submit'), class: 'btn btn-info btn-sm' %>
           <%= link_to icon('remove'),
-                      delivery_men_path(_reset: 'reset'),
+                      deliveries_path(_reset: 'reset'),
                       title: t('global.filters.clear_filter'),
                       data: { toggle: 'tooltip', container: 'body', placement: 'left' },
                       class: 'btn btn-primary btn-sm' -%>
