--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,9 +2,9 @@
   <div class="row">
     <h1 class="col-md-10"> <%= t '.title' %></h1>
     <div class="actions col-md-2">
-      <%= link_to icon('plus'), new_delivery_path, 
+      <%= link_to icon('plus'), new_order_path, 
         class: 'btn btn-success', data: { toggle: 'tooltip', container: 'body' }, 
-        title: t('deliveries.actions.new', default: t('global.actions.new')) %>
+        title: t('orders.actions.new', default: t('global.actions.new')) %>
       <a class="btn btn-info" role="button" data-toggle="collapse"
         href="#collapse_search_form" aria-expanded="false" aria-controls="collapse_search_form">
         <%= icon "filter" %>
@@ -21,36 +21,36 @@
   <table class="table table-striped">
     <thead>
     <tr>
-      <th><%= t 'activerecord.attributes.delivery.business' %></th>
-      <th><%= t 'activerecord.attributes.delivery.address' %></th>
-      <th><%= t 'activerecord.attributes.delivery.start_date' %></th>
-      <th><%= t 'activerecord.attributes.delivery.end_date' %></th>
+      <th><%= t 'activerecord.attributes.order.business' %></th>
+      <th><%= t 'activerecord.attributes.order.address' %></th>
+      <th><%= t 'activerecord.attributes.order.start_date' %></th>
+      <th><%= t 'activerecord.attributes.order.end_date' %></th>
       <th class="actions"><%= t '.actions', default: t('global.index.actions') %></th>
     </tr>
     </thead>
 
     <tbody>
-      <% @deliveries.each do |delivery| -%>
+      <% @orders.each do |order| -%>
         <tr>
-          <td><%= delivery.business %></td>
-          <td><%= delivery.address %></td>
-          <td><%= delivery.start_date %></td>
-          <td><%= delivery.end_date %></td>
+          <td><%= order.business %></td>
+          <td><%= order.address %></td>
+          <td><%= order.start_date %></td>
+          <td><%= order.end_date %></td>
           <td>
             <div class="btn-toolbar btn-group-xs">
-              <%= link_to icon('eye-open'), delivery,
+              <%= link_to icon('eye-open'), order,
                 class: 'btn btn-link',
-                title: t('deliveries.actions.show', default: t('global.actions.show')),
+                title: t('orders.actions.show', default: t('global.actions.show')),
                 data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
-              <%= link_to icon('pencil'), edit_delivery_path(delivery),
+              <%= link_to icon('pencil'), edit_order_path(order),
                 class: 'btn btn-link',
-                title: t('deliveries.actions.edit', default: t('global.actions.edit')),
+                title: t('orders.actions.edit', default: t('global.actions.edit')),
                 data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
-              <%= link_to icon('trash'), delivery,  method: :delete,
+              <%= link_to icon('trash'), order,  method: :delete,
                 class: 'btn btn-link text-danger',
-                title: t('deliveries.actions.destroy', default: t('global.actions.destroy')),
+                title: t('orders.actions.destroy', default: t('global.actions.destroy')),
                 data: { toggle: 'tooltip', container: 'body', placement: 'left', 
-                        confirm: t('deliveries.actions.confirm_destroy', 
+                        confirm: t('orders.actions.confirm_destroy', 
                         default: t('global.actions.confirm_destroy'))} %>
             </div>
           </td>
@@ -59,6 +59,6 @@
     </tbody>
   </table>
 
-  <%= render partial:'shared/pager', locals: { model: @deliveries } %>
+  <%= render partial:'shared/pager', locals: { model: @orders } %>
 
 </div>
