--- a/app/views/deliveries/_form.html.erb
+++ b/app/views/deliveries/_form.html.erb
@@ -1,10 +1,11 @@
-<%= simple_form_for(@delivery_man) do |f| %>
+<%= simple_form_for(@delivery) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <div class="row">
-      <%= f.input :nickname, wrapper_html: { class: 'col-md-6' } %>
-      <%= f.input :business_id, wrapper_html: { class: 'col-md-6' } %>
+      <%= f.input :delivery_man_id, wrapper_html: { class: 'col-md-4' } %>
+      <%= f.input :start_date, wrapper_html: { class: 'col-md-4' } %>
+      <%= f.input :end_date, wrapper_html: { class: 'col-md-4' } %>
     </div>
   </div>
 
