Se agregó e integró la gema select2-rails junto a la gema select2_simple_form. Se convirtieron inputs que ameritaban a select2.

--- a/app/views/deliveries/_filter.html.erb
+++ b/app/views/deliveries/_filter.html.erb
@@ -13,6 +13,8 @@
                     wrapper_html: { class: 'col-md-4' }
         %>
         <%= f.input :delivery_man_id,
+                    as: :select2,
+                    collection: DeliveryMan.all,
                     required: false,
                     label: t('.name'),
                     wrapper_html: { class: 'col-md-4' }
