--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   <body>
     <%= render partial: 'shared/navbar' %>
     <div id="content" class="container">
-      <%# render 'shared/flashes' %>
+      <%= render 'shared/flashes' %>
       <%= yield %>
     </div>
     <%= render partial: 'shared/footer' -%>
