--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -3,7 +3,8 @@
 
   <div class="form-inputs">
     <div class="row">
-      <%= f.input :business, wrapper_html: { class: 'col-md-6' } %>
+      <%= f.input :business, as: :select2, collection: Business.all,
+        wrapper_html: { class: 'col-md-6' } %>
       <%= f.input :address, wrapper_html: { class: 'col-md-6' } %>
     </div>
     <div class="row">
