Se corrigió input de business_id y se permitio parametro en el controlador. Se corrigió error en transiciones de estados de una orden.

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="form-inputs">
     <div class="row">
-      <%= f.input :business, as: :select2, collection: Business.all,
+      <%= f.input :business_id, as: :select2, collection: Business.all,
         wrapper_html: { class: 'col-md-6' } %>
       <%= f.input :address, wrapper_html: { class: 'col-md-6' } %>
     </div>
