--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,6 +22,7 @@
             <li><a href="#"><%= link_to t('views.navbar.dropdown.delivery_men'), delivery_men_path %></a></li>
             <li><a href="#"><%= link_to t('views.navbar.dropdown.orders'), orders_path %></a></li>
             <li><a href="#"><%= link_to t('views.navbar.dropdown.deliveries'), deliveries_path %></a></li>
+            <li><a href="#"><%= link_to t('views.navbar.dropdown.users'), users_path %></a></li>
           </ul>
         </li>
       </ul>
