--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -52,6 +52,12 @@
                 data: { toggle: 'tooltip', container: 'body', placement: 'left', 
                         confirm: t('orders.actions.confirm_destroy', 
                         default: t('global.actions.confirm_destroy'))} %>
+                <% if order.can_cancel? %>      
+                  <%= link_to icon('remove'), cancel_order_path(order),
+                  class: 'btn btn-link',
+                  title: t('orders.actions.cancel', default: t('global.actions.cancel')),
+                  data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
+                <% end %>
             </div>
           </td>
         </tr>
