Corecciones para que una orden se pueda cancelar

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -53,8 +53,8 @@
                         confirm: t('orders.actions.confirm_destroy', 
                         default: t('global.actions.confirm_destroy'))} %>
                 <% if order.can_cancel? %>      
-                  <%= link_to icon('remove'), cancel_order_path(order),
-                  class: 'btn btn-link',
+                  <%= link_to icon('remove'), cancel_path(order),
+                  class: 'btn btn-link', method: :post,
                   title: t('orders.actions.cancel', default: t('global.actions.cancel')),
                   data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
                 <% end %>
