Se corrigieron aspectos visuales relacionados con los estados de la orden

--- a/app/views/deliveries/_form.html.erb
+++ b/app/views/deliveries/_form.html.erb
@@ -3,8 +3,8 @@
 
   <div class="form-inputs">
     <div class="row">
-      <%= f.input :start_date, wrapper_html: { class: 'col-md-4' } %>
-      <%= f.input :end_date, wrapper_html: { class: 'col-md-4' } %>
+      <%= f.input :start_date, wrapper_html: { class: 'col-md-4' }, as: :date, html5: true %>
+      <%= f.input :end_date, wrapper_html: { class: 'col-md-4' }, as: :date, html5: true %>
       <%= f.input :delivery_man_id, as: :select2, collection: DeliveryMan.all,
         wrapper_html: { class: 'col-md-4' } %>
     </div>
