--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -27,6 +27,8 @@
         <dd><%= @order.start_date %></dd>
         <dt><%= t 'activerecord.attributes.order.end_date' %></dt>
         <dd><%= @order.end_date %></dd>
+        <dt><%= t 'activerecord.attributes.order.status' %></dt>
+        <dd><%= @order.status %></dd>
     </dl>
   </div>
 </div>
