--- a/app/views/deliveries/_filter.html.erb
+++ b/app/views/deliveries/_filter.html.erb
@@ -5,12 +5,16 @@
         <%= f.input :start_date,
                     required: false,
                     label: t('.name'),
-                    wrapper_html: { class: 'col-md-4' }
+                    wrapper_html: { class: 'col-md-4' },
+                    as: :date,
+                    html5: true                    
         %>
         <%= f.input :end_date,
                     required: false,
                     label: t('.name'),
-                    wrapper_html: { class: 'col-md-4' }
+                    wrapper_html: { class: 'col-md-4' },
+                    as: :date,
+                    html5: true                    
         %>
         <%= f.input :delivery_man_id,
                     as: :select2,
