Se creo vista, ruta y código js para generar mapa.

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -72,5 +72,6 @@
   </table>
 
   <%= render partial:'shared/pager', locals: { model: @orders } %>
+  <%= render partial:'map', locals: { model: @orders } %>
 
 </div>
