Se refactorizaron vistas. Se creó un controlador y vistas para simular el frontend de compra.

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -28,7 +28,7 @@
         <dt><%= t 'activerecord.attributes.order.end_date' %></dt>
         <dd><%= @order.end_date %></dd>
         <dt><%= t 'activerecord.attributes.order.status' %></dt>
-        <dd><%= @order.status %></dd>
+        <dd><%= raw t "enum.order.status.#{@order.status}" %></dd>
     </dl>
   </div>
 </div>
