--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,19 @@
 @import "bootstrap";
 $icon-font-path: "bootstrap-sass/assets/fonts/bootstrap/";
 
+.order-list dd {
+  padding-left: 0px !important;
+  margin-right: 0px !important;
+  padding: 5px !important;
+}
+
+.order-list {
+  padding: 5px !important;
+}
+.order-list dt {
+  width: 90px !important;
+}
+
 //Map context
 
 .block-group,.block,.block-group:after,.block:after,.block-group:before,.block:before{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
