--- a/app/views/deliveries/_form.html.erb
+++ b/app/views/deliveries/_form.html.erb
@@ -3,10 +3,11 @@
 
   <div class="form-inputs">
     <div class="row">
-      <%= f.input :start_date, wrapper_html: { class: 'col-md-4' }, as: :date, html5: true %>
-      <%= f.input :end_date, wrapper_html: { class: 'col-md-4' }, as: :date, html5: true %>
-      <%= f.input :delivery_man_id, as: :select2, collection: DeliveryMan.all,
-        wrapper_html: { class: 'col-md-4' } %>
+      <div class="col-md-5">
+        <%= f.input :delivery_man_id, as: :select2, collection: DeliveryMan.all %>
+        <%= f.input :start_date, as: :datetime, html5: true, disabled: true %>
+        <%= f.input :end_date, as: :datetime, html5: true, disabled: true %>
+      </div>
     </div>
   </div>
 
