--- a/app/views/deliveries/show.html.erb
+++ b/app/views/deliveries/show.html.erb
@@ -18,7 +18,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal well well-sm">
         <dt><%= t 'activerecord.attributes.delivery.start_date' %></dt>
         <dd><%= @delivery.start_date %></dd>
         <dt><%= t 'activerecord.attributes.delivery.end_date' %></dt>
@@ -26,7 +26,7 @@
     </dl>
   </div>
   <div class="col-md-6">
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal well well-sm">
         <dt><%= t 'activerecord.attributes.delivery.delivery_man' %></dt>
         <dd><%= @delivery.delivery_man %></dd>
     </dl>
@@ -41,9 +41,11 @@
             <li>
               <div class="row">
                 <div class="col-md-12">
-                  <dl class="dl-horizontal">
+                  <dl class="dl-horizontal well well-sm order-list">
                       <dt><%= t 'activerecord.attributes.order.address' %></dt>
                       <dd><%= order.address %></dd>
+                      <dt><%= t 'activerecord.attributes.order.status' %></dt>
+                      <dd><%= raw t "enum.order.status.#{order.status}" %></dd>
                   </dl>
                 </div>
               </div>
