--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,46 @@
 @import "bootstrap";
 $icon-font-path: "bootstrap-sass/assets/fonts/bootstrap/";
 
+//FRONTEND
+//
+/* Remove the navbar's default rounded borders and increase the bottom margin */ 
+.frontend-navbar {
+  margin-bottom: 50px;
+  border-radius: 0;
+}
+
+.frontend-body {
+  padding-top: 0 !important;
+}
+
+/* Remove the jumbotron's default bottom margin */ 
+.frontend-jumbotron {
+  background-color: #f2f2f2;
+  margin-bottom: 0;
+
+}
+
+/* Add a gray background color and some padding to the footer */
+.frontend-footer {
+  background-color: #f2f2f2;
+  padding: 0px;
+  color: #333333;
+}
+
+#myNavbar {
+  .open > a:focus {
+    background-color: #f4f4f4 !important;
+  }
+
+  li {
+    a {
+      color: #f4f4f4 !important;
+    }
+  }
+}
+//
+//FRONtEND
+
 .order-list dd {
   padding-left: 0px !important;
   margin-right: 0px !important;
