--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -16,12 +16,13 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
-  <body>
-    <%# render partial: 'shared/navbar' %>
-    <div id="content" class="container">
-      <%= render 'shared/flashes' %>
-      <%= yield %>
-    </div>
-    <%= render partial: 'shared/footer' -%>
+  <body class="frontend-body">
+    <%= render 'shared/frontend/header' %>
+
+    <%= render 'shared/frontend/navbar' %> 
+
+    <%= yield %>
+
+    <%= render 'shared/frontend/footer' %> 
   </body>
 </html>
