--- a/app/views/products/_filter.html.erb
+++ b/app/views/products/_filter.html.erb
@@ -12,7 +12,7 @@
         <div class="col-md-12 text-right">
           <%= f.submit t('global.filters.submit'), class: 'btn btn-info btn-sm' %>
           <%= link_to icon('remove'),
-                      products_path(_reset: 'reset'),
+                      business_products_path(_reset: 'reset'),
                       title: t('global.filters.clear_filter'),
                       data: { toggle: 'tooltip', container: 'body', placement: 'left' },
                       class: 'btn btn-primary btn-sm' -%>
