--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,8 +1,14 @@
 <div class="page-header">
   <div class="row">
-    <h1 class="col-md-10"> <%= t '.title' %></h1>
+    <h1 class="col-md-10"> 
+      <%= t '.title' %>
+      <small><%= t '.secondary_title', model: @business %></small>
+    </h1>
     <div class="actions col-md-2">
-      <%= link_to icon('plus'), new_product_path, 
+        <%= link_to icon('chevron-left'), businesses_path,
+          class: 'btn btn-default', data: { toggle: 'tooltip', container: 'body' },
+          title: t('.back', default: t('global.actions.back')) %>
+      <%= link_to icon('plus'), new_business_product_path(@business), 
         class: 'btn btn-success', data: { toggle: 'tooltip', container: 'body' }, 
         title: t('product.actions.new', default: t('global.actions.new')) %>
       <a class="btn btn-info" role="button" data-toggle="collapse"
@@ -14,7 +20,7 @@
 </div>
 
 <div class="row">
-  <%= render 'filter', q: @q %>
+  <%# render 'filter', q: @q %>
 </div>
 
 <div class="table-responsive">
@@ -36,15 +42,15 @@
           <td><%= product.price %></td>
           <td>
             <div class="btn-toolbar btn-group-xs">
-              <%= link_to icon('eye-open'), product,
+              <%= link_to icon('eye-open'), business_product_path(@business, product),
                 class: 'btn btn-link',
                 title: t('products.actions.show', default: t('global.actions.show')),
                 data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
-              <%= link_to icon('pencil'), edit_product_path(product),
+              <%= link_to icon('pencil'), edit_business_product_path(@business, product),
                 class: 'btn btn-link',
                 title: t('products.actions.edit', default: t('global.actions.edit')),
                 data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
-              <%= link_to icon('trash'), product,  method: :delete,
+              <%= link_to icon('trash'), business_product_path(@business, product),  method: :delete,
                 class: 'btn btn-link text-danger',
                 title: t('products.actions.destroy', default: t('global.actions.destroy')),
                 data: { toggle: 'tooltip', container: 'body', placement: 'left', 
