--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,16 +35,20 @@ $icon-font-path: "bootstrap-sass/assets/fonts/bootstrap/";
 
 /* Remove the jumbotron's default bottom margin */ 
 .frontend-jumbotron {
-  background-color: #f2f2f2;
+  background-color: #ded9d9;
   margin-bottom: 0;
 
 }
 
 /* Add a gray background color and some padding to the footer */
 .frontend-footer {
-  background-color: #f2f2f2;
+  background-color: #ded9d9;
   padding: 0px;
   color: #333333;
+}
+
+.link-title {
+  color: #f2f2f2;
 }
 
 #myNavbar {
