--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -9,8 +9,8 @@
         <%= f.input :address %>
       </div>
       <div class="col-md-6">
+        <%= f.input :product_ids, as: :select2, multiple: true, collection: Product.all %>
         <%= f.input :start_date, as: :date, html5: true %>
-        <%= f.input :end_date, as: :date, html5: true %>
       </div>
     </div>
   </div>
