--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -3,8 +3,9 @@
     <% @businesses.each do |business| %>
       <div class="col-sm-4">
         <div class="panel panel-primary">
-          <div class="panel-heading"><%= business %></div>
-          <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+          <div class="panel-heading"><%= link_to business, business_make_order_path(business), class: "link-title" %></div>
+          <div class="panel-body"><%= image_tag "#{business.name.parameterize.underscore}.png", 
+            class: "img-responsive", alt: business.name, size: '340x200' %></div>
           <div class="panel-footer"><%= business.address %></div>
         </div>
       </div>
