Se configuraron todas las rutas a partir de business. Se requiere business_id en el aplication controller excluyendo el purchase_controller. Se refactorizaron las vistas de acuerdo a estos cambios.

--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -17,12 +17,14 @@
     <%= csrf_meta_tags %>
   </head>
   <body class="frontend-body">
-    <%= render 'shared/frontend/header' %>
+      <%= render 'shared/frontend/header' %>
+      <%= render 'shared/frontend/navbar' %> 
+    <div id="content" class="container">
 
-    <%= render 'shared/frontend/navbar' %> 
 
-    <%= yield %>
+      <%= yield %>
 
-    <%= render 'shared/frontend/footer' %> 
+    </div>
+      <%= render 'shared/frontend/footer' %> 
   </body>
 </html>
