--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,33 +7,27 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to t('views.navbar.app_title'), root_path, class: 'navbar-brand app-title' %>
+      <%= link_to t('views.navbar.app_title', business: @business).html_safe, business_orders_path(@business), class: 'navbar-brand app-title' %>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to t('views.navbar.bussines'), businesses_path %></li>
-        <li><%= link_to t('views.navbar.dropdown.delivery_men'), delivery_men_path %></li>
-        <li><%= link_to t('views.navbar.dropdown.orders'), orders_path %></li>
-        <li><%= link_to t('views.navbar.dropdown.deliveries'), deliveries_path %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
-                                              aria-haspopup="true" aria-expanded="false">
-            <%= t('views.navbar.dropdown.title') %>
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-        <li><%= link_to t('views.navbar.dropdown.strategy'), '#' %></li>
-          </ul>
-        </li>
+        <li><%= link_to t('views.navbar.dropdown.products'), business_products_path(@business) %></li>
+        <li><%= link_to t('views.navbar.dropdown.delivery_men'), business_delivery_men_path(@business) %></li>
+        <li><%= link_to t('views.navbar.dropdown.orders'), business_orders_path(@business) %></li>
+        <li><%= link_to t('views.navbar.dropdown.deliveries'), business_deliveries_path(@business) %></li>
       </ul>
       <div class="navbar-right">
         <ul class="nav navbar-nav">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%# current_user.username %>
-              Cuni
+              <%= t('views.navbar.dropdown.title') %>
               <b class="caret"></b>
             </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t('views.navbar.dropdown.strategy'), '#' %></li>
+              <li><%= link_to t('views.navbar.dropdown.edit_business'), edit_business_path(@business) %></li>
+            </ul>
           </li>
         </ul>
       </div>
