--- a/app/views/orders/_filter.html.erb
+++ b/app/views/orders/_filter.html.erb
@@ -1,6 +1,6 @@
 <div class="collapse col-md-12" id="collapse_search_form">
   <div class="search">
-    <%= search_form_for(@q) do |f| -%>
+    <%= search_form_for(@q, url: business_orders_path(@business)) do |f| -%>
       <div class="row">
         <%= f.input :business_id, as: :select2, collection: Business.all,
                     required: false,
@@ -36,7 +36,7 @@
         <div class="col-md-12 text-right">
           <%= f.submit t('global.filters.submit'), class: 'btn btn-info btn-sm' %>
           <%= link_to icon('remove'),
-                      orders_path(_reset: 'reset'),
+                      business_orders_path(@business, _reset: 'reset'),
                       title: t('global.filters.clear_filter'),
                       data: { toggle: 'tooltip', container: 'body', placement: 'left' },
                       class: 'btn btn-primary btn-sm' -%>
