--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <h1 class="col-md-10"> <%= t '.title' %></h1>
     <div class="actions col-md-2">
-      <%= link_to icon('plus'), new_order_path, 
+      <%= link_to icon('plus'), new_business_order_path(@business),
         class: 'btn btn-success', data: { toggle: 'tooltip', container: 'body' }, 
         title: t('orders.actions.new', default: t('global.actions.new')) %>
       <a class="btn btn-info" role="button" data-toggle="collapse"
@@ -40,28 +40,28 @@
           <td><%= raw t "enum.order.status.#{order.status}" %></td>
           <td>
             <div class="btn-toolbar btn-group-xs">
-              <%= link_to icon('eye-open'), order,
+              <%= link_to icon('eye-open'), business_order_path(@business, order),
                 class: 'btn btn-link',
                 title: t('orders.actions.show', default: t('global.actions.show')),
                 data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
-              <%= link_to icon('pencil'), edit_order_path(order),
+              <%= link_to icon('pencil'), edit_business_order_path(@business, order),
                 class: 'btn btn-link',
                 title: t('orders.actions.edit', default: t('global.actions.edit')),
                 data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
-              <%= link_to icon('trash'), order,  method: :delete,
+              <%= link_to icon('trash'), business_order_path(@business, order),  method: :delete,
                 class: 'btn btn-link text-danger',
                 title: t('orders.actions.destroy', default: t('global.actions.destroy')),
                 data: { toggle: 'tooltip', container: 'body', placement: 'left', 
                         confirm: t('orders.actions.confirm_destroy', 
                         default: t('global.actions.confirm_destroy'))} %>
-                <% if order.can_cancel? %>      
-                  <%= link_to icon('remove'), cancel_path(order),
+                <% if order.can_cancel? %>
+                  <%= link_to icon('remove'), cancel_business_order_path(@business, order),
                   class: 'btn btn-link', method: :post,
                   title: t('orders.actions.cancel', default: t('global.actions.cancel')),
                   data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
                 <% end %>
                 <% if order.can_suspend? %>      
-                  <%= link_to icon('exclamation-sign'), suspend_path(order),
+                  <%= link_to icon('exclamation-sign'), suspend_business_order_path(@business, order),
                   class: 'btn btn-link', method: :post,
                   title: t('orders.actions.suspend', default: t('global.actions.suspend')),
                   data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
