--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -5,10 +5,10 @@
     </div>
     <div class="col-md-2">
       <div class="actions">
-        <%= link_to icon('chevron-left'), orders_path, 
+        <%= link_to icon('chevron-left'), business_orders_path(@business), 
           class: 'btn btn-default', data: { toggle: 'tooltip', container: 'body' }, 
           title: t('.back', default: t('global.actions.back')) %>
-        <%= link_to icon('pencil'), edit_order_path(@order), 
+        <%= link_to icon('pencil'), edit_business_order_path(@business, @order), 
           class: 'btn btn-primary', data: { toggle: 'tooltip', container: 'body' }, 
           title: t('.back', default: t('global.actions.edit')) %>
       </div>
