Se corrigieron rutas, vistas y controlador de delivery_men.

--- a/app/views/delivery_men/_filter.html.erb
+++ b/app/views/delivery_men/_filter.html.erb
@@ -1,6 +1,6 @@
 <div class="collapse col-md-12" id="collapse_search_form">
   <div class="search">
-    <%= search_form_for(@q) do |f| -%>
+    <%= search_form_for(@q, url: business_delivery_men_path(@business)) do |f| -%>
       <div class="row">
         <%= f.input :nickname,
                     required: false,
@@ -12,7 +12,7 @@
         <div class="col-md-12 text-right">
           <%= f.submit t('global.filters.submit'), class: 'btn btn-info btn-sm' %>
           <%= link_to icon('remove'),
-                      delivery_men_path(_reset: 'reset'),
+                      business_delivery_men_path(@business, _reset: 'reset'),
                       title: t('global.filters.clear_filter'),
                       data: { toggle: 'tooltip', container: 'body', placement: 'left' },
                       class: 'btn btn-primary btn-sm' -%>
