--- a/app/views/delivery_men/_form.html.erb
+++ b/app/views/delivery_men/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@delivery_man) do |f| %>
+<%= simple_form_for([@business, @delivery_man]) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
