--- a/app/views/delivery_men/edit.html.erb
+++ b/app/views/delivery_men/edit.html.erb
@@ -5,10 +5,10 @@
     </div>
     <div class="col-md-2">
       <div class="actions">
-        <%= link_to icon('chevron-left'), delivery_men_path, 
+        <%= link_to icon('chevron-left'), business_delivery_men_path(@business), 
           class: 'btn btn-default', data: { toggle: 'tooltip', container: 'body' }, 
           title: t('.back', default: t('global.actions.back')) %>
-        <%= link_to icon('eye-open'), @delivery_man, 
+        <%= link_to icon('eye-open'), [@business, @delivery_man], 
           class: 'btn btn-default', data: { toggle: 'tooltip', container: 'body' }, 
           title: t('.show', default: t('global.actions.show')) %>
       </div>
